# native_dumper

./: CHANGELOG.md  Cargo.toml  MANIFEST.in  README.md  requirements.txt  setup.cfg  setup.py
.github/workflows/: build_wheels.yml  run_tests.yml
src/native_dumper/: __init__.py  dumper.py  version.py
src/native_dumper/common/: __init__.py  columns.py  cursor.py  info.py  pyo3http.pyi  sizes.py  writer.py
src/native_dumper/common/pyo3http/src/: lib.rs
src/native_dumper/core/: __init__.py  connector.py  cursor.py  errors.py  pyo3http.pyi  query.py  session.py  stream.py
src/native_dumper/core/pyo3http/: Cargo.toml
src/native_dumper/core/pyo3http/src/: lib.rs
src/native_dumper/core/queries/: log_access.sql  query_info.sql  system_version.sql
tests/: conftest.py  requirements-test.txt  test_compression_formats.py  test_edge_cases.py  test_native_dumper.py  test_readonly_mode.py  test_with_fake_dumper.py
