[metadata]
name = native-dumper
version = 0.3.7.dev0
description = Library for read and write Native format between Clickhouse and file.

[options]
packages = find:
package_dir =
    = src
install_requires =
    base-dumper==0.2.0.dev4
    csvpack==0.1.0.dev4
    light-compressor==0.1.1.dev1
    nativelib==0.2.5.dev0

[options.packages.find]
where = src

[options.package_data]
* =
    core/queries/*.sql, core/*.pyi
