[metadata]
name = native-dumper
version = 0.3.7.dev3
description = Library for read and write Native format between Clickhouse and file.

[options]
packages = find:
package_dir =
    = src
install_requires =
    base-dumper==0.2.0.dev6
    csvpack==0.1.0.dev6
    light-compressor==0.1.1.dev2
    nativelib==0.2.5.dev3
    urllib3>=1.26.11
    brotli>=1.2.0

[options.packages.find]
where = src

[options.package_data]
* =
    core/queries/*.sql, core/*.pyi
