[metadata]
name = native-dumper
version = 0.3.8.dev0
description = Library for read and write Native format between Clickhouse and file.

[options]
packages = find:
package_dir =
    = src
install_requires =
    base-dumper==0.3.0.dev0
    csvpack==0.2.0.dev0
    light-compressor==0.1.1.dev3
    nativelib==0.2.5.dev4
    urllib3>=1.26.11
    brotli>=1.2.0

[options.packages.find]
where = src

[options.package_data]
* =
    core/queries/*.sql, core/*.pyi
