[package]
name = "pyo3http"
version = "0.2.1"
edition = "2021"

[lib]
name = "pyo3http"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.28.3", features = ["extension-module"] }
reqwest = { version = "0.12.24", features = ["stream", "json"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
